# streamrec

./: .gitignore  docker-compose.yml  dvc.yaml  main.py  pyproject.toml  requirements.txt  twp.py
frontend/app/explore/: page.tsx
frontend/app/home/: page.tsx
frontend/app/recomend/: page.tsx
src/: config.py
src/logging/: logger.py
src/models/: collaborative_filterring.py  resommend.py
src/preprocessing/: build_matrix.py  cleaning.py  encoding.py  filter_sparse.py  matrix_builder.py
